Fixed z-index of the right image in banner

--- a/src/app/modules/Home/Components/home/home.component.scss
+++ b/src/app/modules/Home/Components/home/home.component.scss
@@ -226,6 +226,8 @@
     transform: perspective(1600px) rotateX(0deg) rotateY(-20deg) rotateZ(0deg);
     max-width: 100%;
     margin-top: -85px;
+    position: relative;
+z-index: -20;
   }
 }
 
